fix race